--- a/WebContent/WEB-INF/view/include/footer.jspf
+++ b/WebContent/WEB-INF/view/include/footer.jspf
@@ -1,7 +1,7 @@
 </div>
 
 <div class="ui inverted vertical footer segment form-page">
-	<div class="ui container">Harokopio University</div>
+	<div class="ui container">ASFALISTIKH LOULOUKOS</div>
 </div>
 </body>
 </html>
